[gd_scene load_steps=6 format=3 uid="uid://j5w1wbl3qcjx"]

[ext_resource type="Script" path="res://CityBlocks/Sawblade/sawblade_cannon.gd" id="1_k801f"]
[ext_resource type="PackedScene" uid="uid://bky7rgyyp47bh" path="res://Shooting/targeting_range.tscn" id="2_aerd1"]
[ext_resource type="Script" path="res://Shooting/cannon_config.gd" id="2_tu0x8"]
[ext_resource type="Texture2D" uid="uid://bdya7kuc88b68" path="res://CityBlocks/Sawblade/saw_gun.png" id="4_55t3u"]

[sub_resource type="Resource" id="Resource_lox53"]
script = ExtResource("2_tu0x8")
turning_speed = 1420.0
targeting_range = 100.0
bullets_per_series = 1
reload_between_shots = 1.0
reload_between_series = 1.0

[node name="SawbladeCannon" type="Node2D"]
script = ExtResource("1_k801f")
damage = 10.0
config = SubResource("Resource_lox53")

[node name="TargetingRange" parent="." instance=ExtResource("2_aerd1")]
unique_name_in_owner = true
collision_mask = 19
monitorable = true
range = 100.0

[node name="DamageTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="Blade" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = -5
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_55t3u")

[connection signal="body_entered" from="TargetingRange" to="." method="_on_targeting_range_body_entered"]
[connection signal="body_exited" from="TargetingRange" to="." method="_on_targeting_range_body_exited"]
[connection signal="body_shape_entered" from="TargetingRange" to="." method="_on_targeting_range_body_shape_entered"]
[connection signal="body_shape_exited" from="TargetingRange" to="." method="_on_targeting_range_body_shape_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
